# MBGv2-d

./: .gitignore  Makefile  README.md  pyproject.toml
MBGv2_dissertation/: train.py
MBGv2_dissertation/data_preprocessing/: coco2yolo.py  remove_empty_samples.py  slice_frames.py
MBGv2_dissertation/utils/: logging.py
config/: hyp.mosquito.tire.yaml  hyp.mosquito.watertank.yaml  hyp_mosquito_tire_dissertation.yaml
sh/: README.md
sh/frame_slicing/: custom_fold_processing.sh  process_all_folds.sh
sh/yolo/: train_all_folds.sh
tests/: README.md
