[project]
name = "mbgv2-dissertation"
version = "0.1.0"
description = "MBGv2 dataset pre-processing and finetuning scripts for YOLO models."
authors = [
    {name = "milasd", email = "mila.oliveira@coppe.ufrj.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics (==8.2.91)",
    "ruff (>=0.11.10,<0.12.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"

